--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint --ext .tsx src/*",
-        "lint:fix": "eslint --ext .tsx src/* --fix"
+        "lint:fix": "eslint --ext .tsx src/* --fix",
+        "postinstall": "husky install"
     },
     "eslintConfig": {
         "extends": [
@@ -57,6 +58,13 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
         "prettier": "^2.7.1"
+    },
+    "lint-staged": {
+        "src/**/*.{ts,tsx}": [
+            "yarn lint:fix"
+        ]
     }
 }
