--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,13 @@
                 "extensions": [".tsx"]
             }
         ],
+        "react/function-component-definition": [
+            "error",
+            {
+                "namedComponents": "arrow-function"
+            }
+        ],
+        "react/jsx-props-no-spreading": ["off"],
         "import/extensions": [
             "error",
             {
