--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,40 +1,45 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "airbnb",
+    "plugin:react/jsx-runtime",
+    "plugin:prettier/recommended"
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": ["plugin:react/recommended", "airbnb", "plugin:react/jsx-runtime", "plugin:prettier/recommended"],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": ["react", "@typescript-eslint"],
-    "ignorePatterns": ["node_modules", "dist", "*.test.tsx"],
-    "rules": {
-        "react/jsx-filename-extension": [
-            "error",
-            {
-                "extensions": [".tsx"]
-            }
-        ],
-        "react/function-component-definition": [
-            "error",
-            {
-                "namedComponents": "arrow-function"
-            }
-        ],
-        "react/jsx-props-no-spreading": ["off"],
-        "import/extensions": [
-            "error",
-            {
-                "ts": "never",
-                "tsx": "never"
-            }
-        ],
-        "import/no-unresolved": ["off"]
-    }
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react", "@typescript-eslint"],
+  "ignorePatterns": ["node_modules", "dist", "*.test.tsx"],
+  "rules": {
+    "react/jsx-filename-extension": [
+      "error",
+      {
+        "extensions": [".tsx"]
+      }
+    ],
+    "react/function-component-definition": [
+      "error",
+      {
+        "namedComponents": "arrow-function"
+      }
+    ],
+    "react/jsx-props-no-spreading": ["off"],
+    "import/extensions": [
+      "error",
+      {
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "import/no-unresolved": ["off"]
+  }
 }
