--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
     "sourceType": "module"
   },
   "plugins": ["react", "@typescript-eslint"],
-  "ignorePatterns": ["node_modules", "dist", "*.test.tsx"],
+  "ignorePatterns": ["node_modules", "dist", "*.test.tsx", "src/reportWebVitals.ts"],
   "rules": {
     "react/jsx-filename-extension": [
       "error",
