--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
+    "http-status": "^1.5.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
   },
