--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,29 +22,22 @@
   "plugins": ["react", "@typescript-eslint"],
   "ignorePatterns": ["node_modules", "dist", "*.test.tsx", "src/reportWebVitals.ts", "*.config.js"],
   "rules": {
-    "react/jsx-filename-extension": [
-      "error",
-      {
-        "extensions": [".tsx"]
-      }
-    ],
-    "react/function-component-definition": [
-      "error",
-      {
-        "namedComponents": "arrow-function"
-      }
-    ],
+    "react/jsx-filename-extension": ["error", { "extensions": [".tsx"] }],
+    "react/function-component-definition": ["error", { "namedComponents": "arrow-function" }],
     "react/jsx-props-no-spreading": ["off"],
     "react/require-default-props": ["off"],
-    "import/extensions": [
-      "error",
-      {
-        "ts": "never",
-        "tsx": "never"
-      }
-    ],
+    "import/extensions": ["error", { "ts": "never", "tsx": "never" }],
     "import/no-unresolved": ["off"],
     "no-shadow": "off",
-    "@typescript-eslint/no-shadow": ["error"]
-  }
+    "@typescript-eslint/no-shadow": ["error"],
+    "@typescript-eslint/no-unused-vars": ["error"]
+  },
+  "overrides": [
+    {
+      "files": ["src/**/*Slice.{ts,tsx}"],
+      "rules": {
+        "no-param-reassign": ["off"]
+      }
+    }
+  ]
 }
