--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@emotion/styled": "^11.9.3",
     "@hookform/resolvers": "^2.9.7",
     "@reduxjs/toolkit": "^1.8.3",
+    "@sentry/react": "^7.8.0",
+    "@sentry/tracing": "^7.8.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
