--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "http-status": "^1.5.2",
+    "iconsax-react": "^0.0.8",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
