--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .tsx src/*",
-    "lint:fix": "eslint --ext .tsx src/* --fix",
+    "lint:fix": "eslint --ext .tsx src/**/*.{ts,tsx} --fix",
     "postinstall": "husky install"
   },
   "eslintConfig": {
@@ -64,6 +64,7 @@
     "@commitlint/config-conventional": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "autoprefixer": "^10.4.8",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
@@ -74,7 +75,9 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.7"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
