chore: enable https

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
-REACT_APP_BACKEND_API_URL = "http://localhost:3000";
-REACT_APP_FRONTEND_TITLE = "Encacap Dashboard";
+REACT_APP_BACKEND_API_URL = "http://localhost:3000"
+REACT_APP_FRONTEND_TITLE = "Encacap Dashboard"
+
+# CRA
+PORT = 22402
+HTTPS = true
+SSL_CRT_FILE = "./.certs/encacap.dev.crt"
+SSL_KEY_FILE = "./.certs/encacap.dev.key"
