--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ REACT_APP_FRONTEND_TITLE = "Encacap Dashboard"
 
 # CRA
 PORT = 22402
+HOST = "localhost"
 HTTPS = true
 SSL_CRT_FILE = "./.certs/encacap.dev.crt"
 SSL_KEY_FILE = "./.certs/encacap.dev.key"
