--- a/.github/workflows/buildAndDeployDevelopment.yml
+++ b/.github/workflows/buildAndDeployDevelopment.yml
@@ -23,17 +23,15 @@ jobs:
           yarn install
           yarn build
 
-      - name: Copy to development
+      - name: Copy To Development
         env:
           SRC_FOLDER_PATH: 'build'
           TARGET_BRANCH: 'development'
         run: |
-          files=$(find $SRC_FOLDER_PATH -type f)
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git fetch                         
           git checkout $TARGET_BRANCH
-          git checkout ${GITHUB_REF##*/} -- $files
           git add -A
           git diff-index --quiet HEAD ||  git commit -am "chore: copy build files to development"
           git push origin $TARGET_BRANCH
