--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^1.5.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
@@ -77,6 +78,7 @@
     "lint-staged": "^13.0.3",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.7"
   },
   "lint-staged": {
