--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "add": "^2.0.6",
     "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
     "http-status": "^1.5.2",
@@ -28,9 +29,11 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "tailwind-merge": "^1.5.1",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.0",
+    "yarn": "^1.22.19",
     "yup": "^0.32.11"
   },
   "scripts": {
@@ -40,7 +43,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint --ext .tsx src/*",
     "lint:fix": "eslint --ext .tsx src/**/*.{ts,tsx} --fix",
-    "postinstall": "husky install"
+    "postinstall-husky": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -86,7 +89,7 @@
       "eslint --fix"
     ],
     "*.!(ts|tsx)": [
-      "prettier --write"
+      "prettier --write --ignore-unknown"
     ]
   }
 }
